--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
@@ -9,8 +9,7 @@
             <th style="text-align:left">Color</th>
             <th style="text-align:left">Material</th>
             <th style="text-align:left">Criticality</th>
-            <th style="text-align:left">Unit</th>
-            <th class="action-col"></th>
+            <th style="text-align:left">Unit</th>           
         </tr>
     </thead>    
     <tbody>
@@ -20,31 +19,31 @@
             {
                 //Display mode row start here
                 <tr data-Part_Id="@data.Part_Id" class="display-mode">
-                    <td title="@data.Part_Code" style="width:90%">
+                    <td title="@data.Part_Code" >
                         @data.Part_Code
                     </td>
-                    <td title="@data.Part_Name" style="width:90%">
+                    <td title="@data.Part_Name" >
                         @data.Part_Name
                     </td>
-                    <td title="@data.Part_Type" style="width:90%">
+                    <td title="@data.Part_Type" >
                         @data.Part_Type
                     </td>
-                    <td title="@data.Outsource_Type" style="width:90%">
+                    <td title="@data.Outsource_Type" >
                         @data.Outsource_Type
                     </td>
-                    <td title="@data.Category_Name" style="width:90%">
+                    <td title="@data.Category_Name" >
                         @data.Category_Name
                     </td>
-                    <td title="@data.Color_Name" style="width:90%">
+                    <td title="@data.Color_Name" >
                         @data.Color_Name
                     </td>
-                    <td title="@data.Material_Name" style="width:90%">
+                    <td title="@data.Material_Name" >
                         @data.Material_Name
                     </td>
-                    <td title="@data.Criticality_Name" style="width:90%">
+                    <td title="@data.Criticality_Name" >
                         @data.Criticality_Name
                     </td>
-                    <td title="@data.Unit_Name" style="width:90%">
+                    <td title="@data.Unit_Name" >
                         @data.Unit_Name
                     </td>                   
                 </tr>
