--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/PartStockIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/PartStockIndex.cshtml
@@ -13,7 +13,7 @@
     </div>
 </div>
 
-<div id="grdFilterList" >
+<div id="grdFilterList" style="min-height :500px; max-height: 550px; overflow-y: scroll;">
     @*@Html.Partial("_FilterList", Model.PartList)*@
     @*Bind _LineItemList using ajax call*@
 </div>
