--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
@@ -1,4 +1,4 @@
-﻿<table style="width:100%;" cellspacing="0" class="table table-bordred" id="tblPartList">
+﻿<table style="width:100%;" cellspacing="0" class="table table-bordred" id="tblFilterList">
     <thead>
         <tr>
             <th style="text-align:left">Part Code</th>
