--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/PartStockIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/PartStockIndex.cshtml
@@ -126,8 +126,7 @@
                     complete: function () {
                         Common.showDialog.hide();
                     },
-                    success: function (result) {
-                        debugger;
+                    success: function (result) {                     
                         $("#grdFilterList").html('');
                         $("#grdFilterList").html(result);
                     },
@@ -138,22 +137,50 @@
             },
             UpdateStock: function () {
                 debugger;
-                var urlPath, Part_Id, Store_Id, Quantity, Decription
+                var urlPath, Part_Id, Store_Id, Quantity, Decription, Store_Id, Description
+                    , In_Quantity, Out_Quantity, Date, Store_Id
+                var strValidationMsglists = "";
 
                 var row = $("#grdFilterList").find("#tblFilterList").find("tr.selected");
                 var data = $(row);                
-                var Part_Id = $(data).attr("data-Part_Id");
-               
-                
+                Part_Id = $(data).attr("data-Part_Id");
+                Store_Id = $("#ddlStore").val(),
+                Quantity = $("#Quantity").val();
+                In_Quantity = Quantity;
+                Out_Quantity = Quantity;
+                Date = $("#Date").val();
+
+                //put validation here
+
+                if ((Quantity == "") || (fn_numbervalidation(Quantity))) {
+                    strValidationMsglists = strValidationMsglists + "<li>Quantity is required.</li>";
+                    }
+                if (Date == "") {
+                    strValidationMsglists = strValidationMsglists + "<li>Date is required.</li>";
+                }
+                if (Store_Id < 1) {
+                    strValidationMsglists = strValidationMsglists + "<li>Select a valid Store.</li>";
+                }
+                if (strValidationMsglists != "") {
+                    strValidationMsglists = "<ol>" + strValidationMsglists + "</ol>"
+                    fn_ShowHideUserMessageDivWithCssClass_common('divDisplayPartMessages', strValidationMsglists, true, 'alert alert-danger'); //common function to display error message.
+                    return false;
+                }
+
                 urlPath = "/PartStock/UpdatePartStock";
                 $.ajax({
                     type: "Get",
                     cache: false,
                     url: urlPath,
                     data: {
+
                         Part_Id: Part_Id,
-                        Store_Id: $("#ddlStore").val(),
+                        Store_Id: Store_Id,
                         Description: $("#Description").val(),
+                        In_Quantity: In_Quantity,
+                        Out_Quantity: Out_Quantity,
+                        Date: Date
+
                     },
                     beforeSend: function () {
                         Common.showDialog.show('Please wait....', {
@@ -164,10 +191,9 @@
                     complete: function () {
                         Common.showDialog.hide();
                     },
-                    success: function (result) {
-                        if (result.operationstatuscode == 3) {
-                            fn_ShowHideUserMessageDivWithCssClass_common('divDisplayPartMessages', result.messagedata, true, 'alert alert-success');
-                            Partjs.fn_ReloadPartGrid();
+                    success: function (result) {                       
+                        if (result.operationstatuscode == 1) {
+                            fn_ShowHideUserMessageDivWithCssClass_common('divDisplayPartMessages', result.messagedata, true, 'alert alert-success');                           
                         }
                         else {
                             fn_ShowHideUserMessageDivWithCssClass_common('divDisplayPartMessages', result.messagedata, true, 'alert alert-danger');
