update stock detail page

--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/PartStockIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/PartStockIndex.cshtml
@@ -147,7 +147,7 @@
                 Store_Id = $("#ddlStore").val(),
                 Quantity = $("#Quantity").val();
                 In_Quantity = Quantity;
-                Out_Quantity = Quantity;
+                Out_Quantity = '';
                 Date = $("#Date").val();
 
                 //put validation here
