--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/PartIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/PartIndex.cshtml
@@ -255,6 +255,18 @@
                     if (Outsource_Type_Id < 1) {
                         strValidationMsglists = strValidationMsglists + "<li>Select a valid Outsource Type.</li>";
                     }
+                    if (Category_Id < 1) {
+                        strValidationMsglists = strValidationMsglists + "<li>Select a valid Category or N/A.</li>";
+                    }
+                    if (Color_Id < 1) {
+                        strValidationMsglists = strValidationMsglists + "<li>Select a valid colr or N/A.</li>";
+                    }                   
+                    if (Material_Id < 1) {
+                        strValidationMsglists = strValidationMsglists + "<li>Select a valid Material or N/A.</li>";
+                    }
+                    if (Criticality_Id < 1) {
+                        strValidationMsglists = strValidationMsglists + "<li>Select a valid Criticality or N/A.</li>";
+                    }                   
                     if (Unit_Id < 1) {
                         strValidationMsglists = strValidationMsglists + "<li>Select a valid Unit.</li>";
                     }
