update validation message

--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Part/PartIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Part/PartIndex.cshtml
@@ -247,7 +247,7 @@
                         strValidationMsglists = strValidationMsglists + "<li>Part Name is required.</li>";
                     }
                     if (Part_Code == "") {
-                        strValidationMsglists = strValidationMsglists + "<li>Part Code is required.</li>";
+                        strValidationMsglists = strValidationMsglists + "<li>Type a valid part code OR N/A.</li>";
                     }
                     if (Part_Type_Id < 1) {
                         strValidationMsglists = strValidationMsglists + "<li>Select a valid Part Type.</li>";
