--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_FilterList.cshtml
@@ -21,7 +21,7 @@
         {
             foreach (var data in Model)
             {
-                 <tr data-Part_Id="@data.Part_Id" >
+                 <tr data-Part_Id="@data.Part_Id" data-Part_Code="@data.Part_Code" >
                      <td >
                          <input type="checkbox" id="chkSelect" value="false" />
                      </td>
