--- a/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_StockEntry.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/PartStock/_StockEntry.cshtml
@@ -21,6 +21,6 @@
     </div>
    
     <div style="float: left;  margin: 30px 8px;">
-        <button type="button" id="btnUpdateStock">Add</button>
+        <button type="button" id="btnUpdateStock">save</button>
     </div>
 </div>
