--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -26,19 +26,20 @@
                 @Html.ActionLink("Inventory Tool", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    @*<li>@Html.ActionLink("Home", "Index", "Home")</li>*@
-                    <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
-                    <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
+                <ul class="nav navbar-nav" style="font-weight:bold;">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Master<b class="caret"></b></a>
+                        <ul class="dropdown-menu">
+                            <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
+                            <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
+                        </ul>
+                    </li>                   
                     <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
-                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
-
     <div class="container body-content">
         @RenderBody()
         <hr />
