--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/CustomerIndex.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Customer/CustomerIndex.cshtml
@@ -1,31 +1,31 @@
-﻿@model IEnumerable<InventoryTool.Model.GetAllProduct_Result>
+﻿@model IEnumerable<InventoryTool.Model.GetAllCustomer_Result>
 @{
-    ViewBag.Title = "Products";
+    ViewBag.Title = "Customers";
 }
-<script src="~/Scripts/Product/Product.js"></script>
+<script src="~/Scripts/Customer/Customer.js"></script>
 <link href="@Url.Content("~/Content/themes/base/jquery-ui.css")" rel="Stylesheet" type="text/css">
 <link href="~/Content/custom-css/custome.css" rel="stylesheet" />
 <link href="~/Content/custom-css/shared.css" rel="stylesheet" />
-<div role="tabpanel" class="tab-pane active" id="Product">
+<div role="tabpanel" class="tab-pane active" id="Customer">
     <div class="container">
         <div style="margin-top:23px">
             <div class="panel panel-default" style="margin-bottom:25px">
                 <div style="margin-top:1%">
-                    <label style="margin-left:30px">Product</label><br />
-                    <a href="javascript:void(0)" id="lnkAddNewProduct" style="color:#01A4EF;text-decoration:underline;margin-left:30px; ">
+                    <label style="margin-left:30px">Customer</label><br />
+                    <a href="javascript:void(0)" id="lnkAddNewCustomer" style="color:#01A4EF;text-decoration:underline;margin-left:30px; ">
                         <span class="glyphicon glyphicon-plus-sign"></span>
                         Add New Item
                     </a>
-                    <div id="divDisplayProductMessages">
+                    <div id="divDisplayCustomerMessages">
                     </div>
                     @* This row will use in clone*@
-                    <table id="tblMasterProduct" style="display:none">
-                        <tr data-Product_Id="-1" id="MasterRow_Product">
+                    <table id="tblMasterCustomer" style="display:none">
+                        <tr data-Customer_Id="-1" id="MasterRow_Customer">
                             <td>
-                                @Html.TextBox("Product_Code", "", new { @class = "clsProduct_Code form-control" })
+                                @Html.TextBox("Customer_Code", "", new { @class = "clsCustomer_Code form-control" })
                             </td>
                             <td>
-                                @Html.TextBox("Product_Name", "", new { @class = "clsProduct_Name form-control" })
+                                @Html.TextBox("Customer_Name", "", new { @class = "clsCustomer_Name form-control" })
                             </td>
                             <td>
                                 @Html.TextBox("Manufacturing_Days", "", new { @class = "clsManufacturing_Days form-control" })
@@ -34,16 +34,16 @@
                                 @Html.TextBox("Description", "", new { @class = "clsDescription form-control" })
                             </td>                            
                             <td>
-                                <a href="javascript:void(0);" title="Save" class="clsAddUpdateProduct">  Save</a>
+                                <a href="javascript:void(0);" title="Save" class="clsAddUpdateCustomer">  Save</a>
                                 <a href="javascript:void(0);" title="Cancel" onclick="fn_RemoveRow(this)">Cancel</a>
                             </td>
                         </tr>
-                        <tr data-Product_Id="" class="edit-mode" id="MasterRowEdit_Product">
+                        <tr data-Customer_Id="" class="edit-mode" id="MasterRowEdit_Customer">
                             <td>
-                                @Html.TextBox("Product_Code", "", new { @class = "clsProduct_Code form-control" })
+                                @Html.TextBox("Customer_Code", "", new { @class = "clsCustomer_Code form-control" })
                             </td>
                             <td>
-                                @Html.TextBox("Product_Name", "", new { @class = "clsProduct_Name form-control" })
+                                @Html.TextBox("Customer_Name", "", new { @class = "clsCustomer_Name form-control" })
                             </td>
                             <td>
                                 @Html.TextBox("Manufacturing_Days", "", new { @class = "clsManufacturing_Days form-control" })
@@ -52,15 +52,15 @@
                                 @Html.TextBox("Description", "", new { @class = "clsDescription form-control" })
                             </td>   
                             <td>
-                                <a href="javascript:void(0);" title="Update" class="clsAddUpdateProduct">Update</a>
-                                <a href="javascript:void(0);" title="Cancel" class="clsCancelProductUpdate">Cancel</a>
+                                <a href="javascript:void(0);" title="Update" class="clsAddUpdateCustomer">Update</a>
+                                <a href="javascript:void(0);" title="Cancel" class="clsCancelCustomerUpdate">Cancel</a>
                             </td>
                         </tr>
                     </table>
                     <!--End of Master Row* -->
 
-                    <div id="dvProductList">
-                        @Html.Partial("_ProductList", Model)
+                    <div id="dvCustomerList">
+                        @Html.Partial("_CustomerList", Model)
                     </div>
                 </div>
             </div>
@@ -71,33 +71,33 @@
 <script type="text/javascript">
    
     $(document).ready(function () {
-        var Productjs = {
+        var Customerjs = {
             init: function () {
-                var obj = Productjs;                
-                obj.LoadProduct();
+                var obj = Customerjs;                
+                obj.LoadCustomer();
                 Common.setAttributeList(obj);
             },
-            LoadProduct: function () {
+            LoadCustomer: function () {
               
-                //  var obj = Productjs;
+                //  var obj = Customerjs;
                 //initial load the Datatable setting.
-                Productjs.ReinitiateDataTable('tblProductList');
+                Customerjs.ReinitiateDataTable('tblCustomerList');
 
-                $("#Product").find("#dvProductList").on("click", ".clsDeleteProduct", function () {
+                $("#Customer").find("#dvCustomerList").on("click", ".clsDeleteCustomer", function () {
                    
-                    var data, Product_Id, urlPath;
+                    var data, Customer_Id, urlPath;
                     var promptdelete = confirm('Are you sure you want to delete this record? There could be dependent budget requests which may get impacted based on this action');
                     if (promptdelete) {
                         data = $(this).parents('tr');
-                        Product_Id = $(data).attr('data-Product_id');
-                        urlPath = "/Product/DeleteProduct";
-                        if (Product_Id != '') {
+                        Customer_Id = $(data).attr('data-Customer_id');
+                        urlPath = "/Customer/DeleteCustomer";
+                        if (Customer_Id != '') {
                             $.ajax({
                                 type: "Get",
                                 cache: false,
                                 url: urlPath,
                                 data: {
-                                    Product_Id: Product_Id
+                                    Customer_Id: Customer_Id
                                 },
                                 beforeSend: function () {
                                     Common.showDialog.show('Please wait....', {
@@ -110,11 +110,11 @@
                                 },
                                 success: function (result) {
                                     if (result.operationstatuscode == 3) {
-                                        fn_ShowHideUserMessageDivWithCssClass_common('divDisplayProductMessages', result.messagedata, true, 'alert alert-success');
-                                        Productjs.fn_ReloadProductGrid();
+                                        fn_ShowHideUserMessageDivWithCssClass_common('divDisplayCustomerMessages', result.messagedata, true, 'alert alert-success');
+                                        Customerjs.fn_ReloadCustomerGrid();
                                     }
                                     else {
-                                        fn_ShowHideUserMessageDivWithCssClass_common('divDisplayProductMessages', result.messagedata, true, 'alert alert-danger');
+                                        fn_ShowHideUserMessageDivWithCssClass_common('divDisplayCustomerMessages', result.messagedata, true, 'alert alert-danger');
                                     }
                                 },
                                 error: function (ex) {
@@ -128,20 +128,20 @@
 
                 });
                 ///Get Row Data in Edit Mode
-                $("#Product").find("#dvProductList").on("click", ".clsEditProduct", function () {
+                $("#Customer").find("#dvCustomerList").on("click", ".clsEditCustomer", function () {
 
-                    var Product_Id, data, urlPath;
+                    var Customer_Id, data, urlPath;
                     data = $(this).parents('tr');
-                    Product_Id = $(data).attr('data-Product_id');
-                    urlPath = "/Product/GetProductByProductId";
-                    if (Product_Id != '') {
-                        $('.clsEditProduct ,.clsDeleteProduct').css('display', 'none');
+                    Customer_Id = $(data).attr('data-Customer_id');
+                    urlPath = "/Customer/GetCustomerByCustomerId";
+                    if (Customer_Id != '') {
+                        $('.clsEditCustomer ,.clsDeleteCustomer').css('display', 'none');
                         $.ajax({
                             type: "Get",
                             cache: false,
                             url: urlPath,
                             data: {
-                                Product_Id: Product_Id
+                                Customer_Id: Customer_Id
                             },
                             beforeSend: function () {
                                 Common.showDialog.show('Please wait....', {
@@ -154,13 +154,13 @@
                             },
                             success: function (result) {
                                 $(data).hide();
-                                var row = $("#MasterRowEdit_Product").clone();
-                                $(row).find('.clsProduct_Code').val(result.Product_Code);                                
-                                $(row).find('.clsProduct_Name').val(result.Product_Name);
+                                var row = $("#MasterRowEdit_Customer").clone();
+                                $(row).find('.clsCustomer_Code').val(result.Customer_Code);                                
+                                $(row).find('.clsCustomer_Name').val(result.Customer_Name);
                                 $(row).find('.clsManufacturing_Days').val(result.Manufacturing_Days);
                                 $(row).find('.clsDescription').val(result.Description);
                                 $(row).removeAttr("style");
-                                $(row).attr("data-Product_Id", Product_Id);
+                                $(row).attr("data-Customer_Id", Customer_Id);
                                 $(data).after(row);
                             },
                             error: function (ex) {
@@ -170,66 +170,66 @@
                     }
 
                 });
-                $("#lnkAddNewProduct").on('click', function () {
-                    var oTable = $('#tblProductList').dataTable();
+                $("#lnkAddNewCustomer").on('click', function () {
+                    var oTable = $('#tblCustomerList').dataTable();
                     oTable.fnPageChange('first');
                     //get the clone row.
-                    var row = $("#MasterRow_Product").clone();
+                    var row = $("#MasterRow_Customer").clone();
                     $(row).removeAttr("style");
-                    $(row).find('.clsProduct_Code').val('');
-                    $(row).find('.clsProduct_Name').val('');
+                    $(row).find('.clsCustomer_Code').val('');
+                    $(row).find('.clsCustomer_Name').val('');
                     $(row).find('.clsManufacturing_Days').val('');
                     $(row).find('.clsDescription').val('');
-                    $("#tblProductList >tbody").prepend(row);// now will append the clone row to table.
+                    $("#tblCustomerList >tbody").prepend(row);// now will append the clone row to table.
                 });
                 ///Handle the Cancel update functionality
-                $("#Product").find("#dvProductList").on("click", ".clsCancelProductUpdate", function () {
+                $("#Customer").find("#dvCustomerList").on("click", ".clsCancelCustomerUpdate", function () {
 
                     var data;
                     data = $(this).parents('tr');
                     $(data).closest('tr.edit-mode').hide();
                     $(data).closest('tr').prev('tr.display-mode').show();
-                    $('.clsEditProduct,.clsDeleteProduct').removeAttr('style');
+                    $('.clsEditCustomer,.clsDeleteCustomer').removeAttr('style');
                 });
                 ///Handle the Add/update functionality
-                $("#Product").find("#dvProductList").on("click", ".clsAddUpdateProduct", function () {
+                $("#Customer").find("#dvCustomerList").on("click", ".clsAddUpdateCustomer", function () {
                    
-                    var Product_Id, Product_Name, data, urlPath;
+                    var Customer_Id, Customer_Name, data, urlPath;
                     var strValidationMsglists = "";
 
                     data = $(this).parents('tr');
-                    Product_Id = $(data).attr('data-Product_Id');
+                    Customer_Id = $(data).attr('data-Customer_Id');
                     
-                    Product_Name = $(data).find(".clsProduct_Name").val();
-                    Product_Code = $(data).find(".clsProduct_Code").val();
+                    Customer_Name = $(data).find(".clsCustomer_Name").val();
+                    Customer_Code = $(data).find(".clsCustomer_Code").val();
                     Manufacturing_Days = $(data).find(".clsManufacturing_Days").val();
                     Description = $(data).find(".clsDescription").val();
                     //put validation here
 
-                    if (Product_Name == "")  {
-                        strValidationMsglists = strValidationMsglists + "<li>Product Name is required.</li>";
+                    if (Customer_Name == "")  {
+                        strValidationMsglists = strValidationMsglists + "<li>Customer Name is required.</li>";
                     }
-                    if (Product_Code == "")  {
-                        strValidationMsglists = strValidationMsglists + "<li>Product Code is required.</li>";
+                    if (Customer_Code == "")  {
+                        strValidationMsglists = strValidationMsglists + "<li>Customer Code is required.</li>";
                     }
                     if ((Manufacturing_Days == "") || ((fn_numbervalidation(Manufacturing_Days)))) {
                         strValidationMsglists = strValidationMsglists + "<li>Manufacturing Days is required and it shouldn’t be numeric.</li>";
                     }
                     if (strValidationMsglists != "") {
                         strValidationMsglists = "<ol>" + strValidationMsglists + "</ol>"
-                        fn_ShowHideUserMessageDivWithCssClass_common('divDisplayProductMessages', strValidationMsglists, true, 'alert alert-danger'); //common function to display error message.
+                        fn_ShowHideUserMessageDivWithCssClass_common('divDisplayCustomerMessages', strValidationMsglists, true, 'alert alert-danger'); //common function to display error message.
                         return false;
                     }
-                    urlPath = "/Product/AddUpdateProduct";
+                    urlPath = "/Customer/AddUpdateCustomer";
                     if (true) {
                         $.ajax({
                             type: "Get",
                             cache: false,
                             url: urlPath,
                             data: {
-                                Product_Id: Product_Id,
-                                Product_Code: Product_Code, 
-                                Product_Name: Product_Name,
+                                Customer_Id: Customer_Id,
+                                Customer_Code: Customer_Code, 
+                                Customer_Name: Customer_Name,
                                 Manufacturing_Days: Manufacturing_Days,
                                 Description: Description
                             },
@@ -244,11 +244,11 @@
                             },
                             success: function (result) {
                                 if (result.operationstatuscode == 1 || result.operationstatuscode == 2) {
-                                    fn_ShowHideUserMessageDivWithCssClass_common('divDisplayProductMessages', result.messagedata, true, 'alert alert-success');
-                                    Productjs.fn_ReloadProductGrid();
+                                    fn_ShowHideUserMessageDivWithCssClass_common('divDisplayCustomerMessages', result.messagedata, true, 'alert alert-success');
+                                    Customerjs.fn_ReloadCustomerGrid();
                                 }
                                 else {
-                                    fn_ShowHideUserMessageDivWithCssClass_common('divDisplayProductMessages', result.messagedata, true, 'alert alert-danger');
+                                    fn_ShowHideUserMessageDivWithCssClass_common('divDisplayCustomerMessages', result.messagedata, true, 'alert alert-danger');
                                 }
                             },
                             error: function (ex) {
@@ -260,9 +260,9 @@
             },
 
             ///This function refresh the grid data.
-            fn_ReloadProductGrid: function () {
+            fn_ReloadCustomerGrid: function () {
 
-                var urlPath = "/Product/GetProductPartial";
+                var urlPath = "/Customer/GetCustomerPartial";
                 if (true) {
                     $.ajax({
                         type: "Get",
@@ -275,12 +275,12 @@
                             //});
                         },
                         complete: function () {
-                            Productjs.ReinitiateDataTable('tblProductList');
+                            Customerjs.ReinitiateDataTable('tblCustomerList');
                             Common.showDialog.hide();
 
                         },
                         success: function (result) {
-                            $("#dvProductList").html(result);
+                            $("#dvCustomerList").html(result);
                             Common.showDialog.hide();
                         },
                         error: function (ex) {
@@ -307,6 +307,6 @@
             }
 
         }
-        Productjs.init();
+        Customerjs.init();
     });
 </script>
