--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -33,6 +33,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
                             <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
+                            <li>@Html.ActionLink("Customer", "CustomerIndex", "Customer")</li>
                         </ul>
                     </li>                   
                     <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
