--- a/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
+++ b/Frontend/InventoryTool/InventoryTool.UI/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
                             <li>@Html.ActionLink("Product", "ProductIndex", "Product")</li>
                             <li>@Html.ActionLink("Part", "PartIndex", "Part")</li>
                             <li>@Html.ActionLink("Customer", "CustomerIndex", "Customer")</li>
+                            <li>@Html.ActionLink("Supplier", "SupplierIndex", "Supplier")</li>
                         </ul>
                     </li>                   
                     <li>@Html.ActionLink("Stock", "PartStockIndex", "PartStock")</li>
